--- a/style.css
+++ b/style.css
@@ -77,7 +77,21 @@ body::before {
     color: var(--primary-color);
     opacity: 0.3;
     animation: float 15s linear infinite alternate;
-    font-size: 30px;
+    font-size: 27px;
+}
+
+@media (max-width: 1024px) {
+    .floating-icon {
+        font-size: 20px;
+    }
+
+}
+
+@media (max-width: 768px) {
+    .floating-icon {
+        font-size: 15px;
+    }
+
 }
 
 @keyframes float {
@@ -178,11 +192,11 @@ body.dark .card {
 
     0%,
     100% {
-        transform: scale(1);
+        transform: scale(.98);
     }
 
     50% {
-        transform: scale(1.05);
+        transform: scale(1.03);
     }
 }
 
